Add an application class to enable auto calibration Remove pt-extensions becuase of dependency hickups