@@ -1,11 +1,5 @@
 package org.matsim.stuttgart.run;
 
-import ch.sbb.matsim.config.SwissRailRaptorConfigGroup;
-import ch.sbb.matsim.routing.pt.raptor.SwissRailRaptorModule;
-import com.jogamp.common.net.Uri;
-import org.apache.http.client.utils.URLEncodedUtils;
-import org.geotools.geometry.jts.JTS;
-import org.geotools.referencing.CRS;
 import org.locationtech.jts.geom.Geometry;
 import org.locationtech.jts.geom.prep.PreparedGeometry;
 import org.locationtech.jts.geom.prep.PreparedGeometryFactory;
@@ -16,51 +10,41 @@ import org.matsim.contrib.bicycle.BicycleConfigGroup;
 import org.matsim.contrib.bicycle.Bicycles;
 import org.matsim.core.config.Config;
 import org.matsim.core.config.ConfigGroup;
-import org.matsim.core.config.ConfigUtils;
 import org.matsim.core.config.groups.PlanCalcScoreConfigGroup;
 import org.matsim.core.config.groups.PlansCalcRouteConfigGroup;
 import org.matsim.core.controler.AbstractModule;
 import org.matsim.core.controler.Controler;
 import org.matsim.core.controler.OutputDirectoryHierarchy;
-import org.matsim.core.controler.OutputDirectoryLogging;
 import org.matsim.core.router.TripStructureUtils;
-import org.matsim.core.scenario.ScenarioUtils;
 import org.matsim.core.utils.geometry.geotools.MGC;
 import org.matsim.core.utils.gis.ShapeFileReader;
 import org.matsim.stuttgart.Utils;
 import org.matsim.stuttgart.analysis.TripAnalyzerModule;
 import org.opengis.referencing.FactoryException;
-import org.opengis.referencing.operation.MathTransform;
-import org.opengis.referencing.operation.TransformException;
+import picocli.CommandLine;
 
-import java.io.File;
 import java.net.MalformedURLException;
-import java.net.URI;
 import java.net.URL;
-import java.nio.file.Files;
-import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import static org.matsim.core.config.groups.ControlerConfigGroup.RoutingAlgorithmType.FastAStarLandmarks;
 
-public class RunStuttgart extends MATSimApplication {
+@CommandLine.Command(header = ":: Open Stuttgart Scenario ::", version = StuttgartApplication.VERSION)
+public class StuttgartApplication extends MATSimApplication {
 
-    public static void main(String[] args) throws MalformedURLException, FactoryException {
+    /**
+     * Current version identifier.
+     */
+    public static final String VERSION = "v2.0";
 
-        Config config = loadConfig(args);
-        Scenario scenario = loadScenario(config);
-        Controler controler = loadControler(scenario);
-        controler.run();
+    public static void main(String[] args) {
+        MATSimApplication.run(StuttgartApplication.class, args);
     }
 
-
-    public static Config loadConfig(String[] args, ConfigGroup... modules) {
-        OutputDirectoryLogging.catchLogEntries();
-
+    @Override
+    protected List<ConfigGroup> getCustomModules() {
         // Materialize bike config group
         BicycleConfigGroup bikeConfigGroup = new BicycleConfigGroup();
         bikeConfigGroup.setBicycleMode(TransportMode.bike);
@@ -71,17 +55,11 @@ public class RunStuttgart extends MATSimApplication {
         // materialize stuttgart config group
         var stuttgartConfig = new StuttgartConfigGroup();
 
-        //this feels a little messy, but I guess this is how var-args work
-        List<ConfigGroup> moduleList = new ArrayList<>(Arrays.asList(modules));
-        moduleList.add(bikeConfigGroup);
-        moduleList.add(printerConfigGroup);
-        moduleList.add(stuttgartConfig);
-        moduleList.add(new SwissRailRaptorConfigGroup());
+        return List.of(bikeConfigGroup, printerConfigGroup, stuttgartConfig);
+    }
 
-        var moduleArray = moduleList.toArray(new ConfigGroup[0]);
-
-        Config config = ConfigUtils.loadConfig(args, moduleArray);
-
+    @Override
+    protected Config prepareConfig(Config config) {
         config.plansCalcRoute().setAccessEgressType(PlansCalcRouteConfigGroup.AccessEgressType.accessEgressModeToLink);
         config.qsim().setUsingTravelTimeCheckInTeleportation(true);
         config.qsim().setUsePersonIdForMissingVehicleId(false);
@@ -113,20 +91,15 @@ public class RunStuttgart extends MATSimApplication {
         return config;
     }
 
-    public static Scenario loadScenario(Config config) {
+    @Override
+    protected void prepareScenario(Scenario scenario) {
 
-        return ScenarioUtils.loadScenario(config);
+        // don't do anything
     }
 
-    public static Controler loadControler(Scenario scenario) throws MalformedURLException, FactoryException {
+    @Override
+    protected void prepareControler(Controler controler) {
 
-        Controler controler = new Controler(scenario);
-        if (!controler.getConfig().transit().isUsingTransitInMobsim())
-            throw new RuntimeException("Public transit will be teleported and not simulated in the mobsim! "
-                    + "This will have a significant effect on pt-related parameters (travel times, modal split, and so on). "
-                    + "Should only be used for testing or car-focused studies with fixed modal split.");
-
-        controler.addOverridingModule(new SwissRailRaptorModule());
         // use the (congested) car travel time for the teleported ride mode
         controler.addOverridingModule(new AbstractModule() {
             @Override
@@ -145,38 +118,24 @@ public class RunStuttgart extends MATSimApplication {
         var shapeUrl = ConfigGroup.getInputFileURL(controler.getConfig().getContext(), stuttgartConfig.getDilutionAreaShape());
 
         var dilutionArea = getDilutionArea(shapeUrl);
+
+
         var printerConfig = (TripAnalyzerModule.PrinterConfigGroup)controler.getConfig().getModules().get(TripAnalyzerModule.PrinterConfigGroup.GROUP_NAME);
         printerConfig.setPersonFilter(personId -> {
-            var person = scenario.getPopulation().getPersons().get(personId);
+            var person = controler.getScenario().getPopulation().getPersons().get(personId);
             var firstActivity = TripStructureUtils.getActivities(person.getSelectedPlan(), TripStructureUtils.StageActivityHandling.ExcludeStageActivities).get(0);
             return dilutionArea.stream().anyMatch(geometry -> geometry.covers(MGC.coord2Point(firstActivity.getCoord())));
         });
         controler.addOverridingModule(new TripAnalyzerModule());
-        return controler;
     }
 
     private static Collection<PreparedGeometry> getDilutionArea(URL shapeFile) {
 
         var factory = new PreparedGeometryFactory();
-       /* var fromCRS = CRS.decode("EPSG:5677");
-        var toCRS = CRS.decode("EPSG:25832");
-        var transformation = CRS.findMathTransform(fromCRS, toCRS);
-
-        */
 
         return ShapeFileReader.getAllFeatures(shapeFile).stream()
                 .map(simpleFeature -> (Geometry) simpleFeature.getDefaultGeometry())
-                //.map(geometry -> transform(geometry, transformation))
                 .map(factory::create)
                 .collect(Collectors.toSet());
-
-    }
-
-    private static Geometry transform(Geometry geometry, MathTransform transform) {
-        try {
-            return JTS.transform(geometry, transform);
-        } catch (TransformException e) {
-            throw new RuntimeException(e);
-        }
     }
 }
